# hs-api-scotty

./: .gitignore  README.md  hs-api-scotty.cabal
app/: Main.hs
src/: Api.hs  Lib.hs
