name:                hs-api-scotty
version:             0.1.0.0
synopsis:            Try out project to create an API in Haskell
description:         Please see README.md
homepage:            https://github.com/matsrietdijk/hs-api-scotty
license:             BSD3
license-file:        LICENSE
author:              Mats Rietdijk
maintainer:          example@example.com
copyright:           2015 Mats Rietdijk
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , scotty
  default-language:    Haskell2010

executable hs-api-scotty-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hs-api-scotty
  default-language:    Haskell2010

test-suite hs-api-scotty-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hs-api-scotty
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/matsrietdijk/hs-api-scotty